feat: Align article text to left

--- a/app/Gallery.css
+++ b/app/Gallery.css
@@ -52,7 +52,7 @@
   color: #080911;
   font-size: 14px;
   font-weight: 300;
-  text-align: center;
+  text-align: left;
   margin-bottom: 1.3em;
   font-family: "Open Sans", sans-serif;
 }
