--- a/app/Gallery.css
+++ b/app/Gallery.css
@@ -6,11 +6,13 @@
     -webkit-border-radius: 0;
     border-radius: 10px 20px;
     padding: 10px;
+    margin: 10px auto;
     transition: all .2s ease-in-out;
 }
 
 .rwp-article:hover {
   transform: scale(1.05);
+  background-color: #f2fbff;
 }
 
 .rwp-profile {
