--- a/app/Gallery.css
+++ b/app/Gallery.css
@@ -5,7 +5,7 @@
     box-shadow: 1px 2px 20px 1px #d3d3d3;
     -webkit-border-radius: 0;
     border-radius: 10px 20px;
-    padding: 12px;
+    padding: 20px;
     margin: 10px auto;
     transition: all .2s ease-in-out;
 }
@@ -28,6 +28,8 @@
   margin-right: auto;
   border-radius: 100%;
   box-shadow: 0 13px 26px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .16);
+  background-size: cover;
+  background-position: center;
 }
 .rwp-title {
   color: #2d354a;
